it was no longer possible to disable FEATURE_PERFTRACING or FEATURE_EVENT_TRACING

--- a/src/binder/v3binder_crossgen/CMakeLists.txt
+++ b/src/binder/v3binder_crossgen/CMakeLists.txt
@@ -5,4 +5,6 @@ add_library_clr(v3binder_crossgen
     ${BINDER_CROSSGEN_SOURCES}
 )
 
+if(FEATURE_PERFTRACING)
 add_dependencies(v3binder_crossgen eventing_headers)
+endif()
