--- a/src/dlls/clretwrc/CMakeLists.txt
+++ b/src/dlls/clretwrc/CMakeLists.txt
@@ -22,4 +22,6 @@ add_library_clr(clretwrc SHARED
 # add the install targets
 install_clr(clretwrc)
 
+if(FEATURE_PERFTRACING)
 add_dependencies(clretwrc eventing_headers)
+endif()
