--- a/src/strongname/api/wks/CMakeLists.txt
+++ b/src/strongname/api/wks/CMakeLists.txt
@@ -1,2 +1,4 @@
 add_library_clr(strongname_wks ${STRONGNAME_SOURCES})
+if(FEATURE_PERFTRACING)
 add_dependencies(strongname_wks eventing_headers)
+endif()
