--- a/src/debug/di/CMakeLists.txt
+++ b/src/debug/di/CMakeLists.txt
@@ -107,4 +107,6 @@ endif (WIN32)
 list(APPEND CORDBDI_SOURCES ${CORDBDI_SOURCES_ASM_FILE})
 
 add_library_clr(cordbdi STATIC ${CORDBDI_SOURCES})
+if(FEATURE_PERFTRACING)
 add_dependencies(cordbdi eventing_headers)
+endif()
