--- a/src/gc/CMakeLists.txt
+++ b/src/gc/CMakeLists.txt
@@ -92,7 +92,11 @@ list(APPEND GC_SOURCES ${GC_HEADERS})
 convert_to_absolute_path(GC_SOURCES ${GC_SOURCES})
 
 add_library_clr(clrgc SHARED ${GC_SOURCES})
+
+if(FEATURE_PERFTRACING)
 add_dependencies(clrgc eventing_headers)
+endif()
+
 target_link_libraries(clrgc ${GC_LINK_LIBRARIES})
 install_clr(clrgc)
 
