--- a/src/unwinder/wks/CMakeLists.txt
+++ b/src/unwinder/wks/CMakeLists.txt
@@ -1,2 +1,4 @@
 add_library_clr(unwinder_wks ${UNWINDER_SOURCES})
+if(FEATURE_PERFTRACING)
 add_dependencies(unwinder_wks eventing_headers)
+endif()
