--- a/src/utilcode/dac/CMakeLists.txt
+++ b/src/utilcode/dac/CMakeLists.txt
@@ -11,4 +11,6 @@ else()
     add_library_clr(utilcode_dac STATIC ${UTILCODE_DAC_SOURCES})
 endif(CLR_CMAKE_PLATFORM_UNIX)
 
+if(UTILCODE_DEPENDENCIES)
 add_dependencies(utilcode_dac ${UTILCODE_DEPENDENCIES})
+endif()
