--- a/src/utilcode/staticnohost/CMakeLists.txt
+++ b/src/utilcode/staticnohost/CMakeLists.txt
@@ -11,4 +11,6 @@ if(CLR_CMAKE_PLATFORM_UNIX)
   target_link_libraries(utilcodestaticnohost  nativeresourcestring)
 endif(CLR_CMAKE_PLATFORM_UNIX)
 
+if(UTILCODE_DEPENDENCIES)
 add_dependencies(utilcodestaticnohost ${UTILCODE_DEPENDENCIES})
+endif()
